--- a/package.json
+++ b/package.json
@@ -58,8 +58,11 @@
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
     "@supabase/supabase-js": "^2.45.0",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/jszip": "^3.4.0",
     "autoprefixer": "^10.4.20",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
@@ -69,6 +72,7 @@
     "embla-carousel-react": "8.5.1",
     "exceljs": "^4.4.0",
     "input-otp": "1.4.1",
+    "jsonwebtoken": "^9.0.2",
     "jszip": "^3.10.1",
     "lucide-react": "^0.454.0",
     "next": "^15.0.0",
